src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Latin America</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Owner Sales</fullName>
        <description>Owner Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Obsolete%2FExhausted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Opportunity Already Exists</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Lead_Conversion_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field value on conversion moved to Account object field: From Lead Conversion.(Read only field for everyone) 
Please do not uncheck this check box.</description>
        <label>Account Lead Conversion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Oracle assigned account number</description>
        <label>Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Additional Information</description>
        <inlineHelpText>Additional Information</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Building_Status__c</fullName>
        <description>Work that the equipment was provided for</description>
        <inlineHelpText>Work that the equipment was provided for</inlineHelpText>
        <label>Building Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Remodel</fullName>
                </value>
                <value>
                    <fullName>Replace Other</fullName>
                </value>
                <value>
                    <fullName>Replace Our Own Equip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to skip validation rules while uploading or updating records into Salesforce. After updating records please uncheck the field.</description>
        <inlineHelpText>Administrator use only. To know more please read field description.
Do not use this field anywhere including reports.</inlineHelpText>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Codestring__c</fullName>
        <description>Codestring for the shipped equipment</description>
        <inlineHelpText>Codestring for the shipped equipment</inlineHelpText>
        <label>Codestring</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <description>Identifies the type of company</description>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Consulting Engineer</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Installer</fullName>
                </value>
                <value>
                    <fullName>Mechanical Contractor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Lead_Conversion_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field value on conversion moved to Contact object field: From Lead Conversion.(Read only field for everyone)
Please do not uncheck this check box.</description>
        <label>Contact Lead Conversion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Id__c</fullName>
        <label>Conversion Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Date/Time the lead was created</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date/Time the lead was created</inlineHelpText>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>If it&apos;s converted; Converted Date - Created Date, Else Now-Created Date</description>
        <formula>/*If it&apos;s converted take the converted date - created date otherwise Now - created date*/


IF (IsConverted,(ConvertedDate - (DATEVALUE(CreatedDate))), (NOW() - CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If it&apos;s converted; Converted Date - Created Date, else Today-Created Date</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Purchased_By__c</fullName>
        <description>Who purchased the shipped equipment</description>
        <inlineHelpText>Name of who purchased the shipped equipment</inlineHelpText>
        <label>Equipment Purchased By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Startup_Date__c</fullName>
        <description>Date when the equipment was started up</description>
        <inlineHelpText>When was the equipment started up?</inlineHelpText>
        <label>Equipment Startup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Size__c</fullName>
        <description>Size of facility or number of sites</description>
        <inlineHelpText>Size of facility or number of sites</inlineHelpText>
        <label>Facility Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Large (&gt; 250K FT2)</fullName>
                </value>
                <value>
                    <fullName>Medium (100K – 250K FT2)</fullName>
                </value>
                <value>
                    <fullName>Small (&lt; 100K FT2)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <description>User interests from McQuay.Com Lead</description>
        <inlineHelpText>Choose one or more Interests that you would like more information on.  To choose more than one, use Ctrl-Click.</inlineHelpText>
        <label>Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Air Handlers</fullName>
                </value>
                <value>
                    <fullName>Applied Equipment – New Building</fullName>
                </value>
                <value>
                    <fullName>Chillers</fullName>
                </value>
                <value>
                    <fullName>Consulting/Advice</fullName>
                </value>
                <value>
                    <fullName>Contracting Services</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>Controls/Integration</fullName>
                </value>
                <value>
                    <fullName>Custom Packaged Systems</fullName>
                </value>
                <value>
                    <fullName>Daikin VRV</fullName>
                </value>
                <value>
                    <fullName>EEH</fullName>
                </value>
                <value>
                    <fullName>Energy Saving Project</fullName>
                </value>
                <value>
                    <fullName>Energy Services</fullName>
                </value>
                <value>
                    <fullName>Engineering Services</fullName>
                </value>
                <value>
                    <fullName>Filters (AAF)</fullName>
                </value>
                <value>
                    <fullName>General Information</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>LEED</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Performance Contracting</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>PPS (CPS)</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
                <value>
                    <fullName>Rooftops</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Sustainability</fullName>
                </value>
                <value>
                    <fullName>Turnkey</fullName>
                </value>
                <value>
                    <fullName>Unitary Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Address_County__c</fullName>
        <description>County for the Job Address</description>
        <inlineHelpText>County for the Job Address</inlineHelpText>
        <label>Job Address County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>Name of the Job for the Shipped Equipment</description>
        <inlineHelpText>Name of the Job for the Shipped Equipment</inlineHelpText>
        <label>Job Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Category__c</fullName>
        <description>This category should be updated by then Rep.  When they begin working it,is it Cold, Warm or Hot??</description>
        <inlineHelpText>What is the status of the Lead?  This should be updated by the Rep &quot;working&quot; the Lead.</inlineHelpText>
        <label>Lead Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Checked__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If a user want to create an Opportunity upon Lead conversion. Then there is no way to know(On Opportunity) if that Opportunity is created from a Lead.  We will use this field to know if this Opportunity is from Lead or not and this field is always true, and used to mark the field &quot;Converted Lead&quot; on the Opportunity to TRUE upon Lead conversion.</description>
        <inlineHelpText>If a user want to create an Opportunity upon Lead conversion. Then there is no way to know(On Opportunity) if that Opportunity is created from a Lead.  Do not Use this field in Reports.</inlineHelpText>
        <label>Lead Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <description>Lead Id of the Lead that is passed over to the opportunity when it&apos;s converted.</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lead Id of the Lead that is passed over to the opportunity when it&apos;s converted.</inlineHelpText>
        <label>Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Division__c</fullName>
        <formula>Text(Owner:User.User_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Lead Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_User_Department__c</fullName>
        <formula>Text(Owner:User.User_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner User Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Summary__c</fullName>
        <description>Lead Summary</description>
        <inlineHelpText>Lead Summary</inlineHelpText>
        <label>Lead Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Value__c</fullName>
        <description>Total points Auto calcs from TAS selection values</description>
        <formula>CASE(Facility_Size__c, &quot;Small (&lt; 100K FT2)&quot;, 10, &quot;Large (&gt; 250K FT2)&quot;, 30, &quot;Medium (100K – 250K FT2)&quot;, 50, 0) 
+
CASE(Primary_Equip_Make__c, &quot;Other&quot;, 10, &quot;Carrier&quot;, 20, &quot;Trane&quot;, 30, &quot;JCI York&quot;, 40, &quot;Daikin Applied&quot;, 50, 0)
+
CASE(Primary_Service_Provider__c, &quot;Daikin Applied&quot;, 0, &quot;Mech Contractor&quot;, 10, &quot;In-House&quot;, 10, &quot;Siemens&quot;, 20, &quot;Honeywell&quot;, 20, &quot;Carrier&quot;, 30, &quot;Trane&quot;, 40, &quot;JCI York&quot;, 50, 0)
+
CASE(System_Type__c, &quot;DX - Splits&quot;, 20, &quot;Lg RTU / SC&quot;, 30, &quot;A-C Chiller&quot;, 40, &quot;W-C Chiller&quot;, 50, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto Calc based on Facility Size, Primary Equip Make, Primary Service Provider and System Type.</inlineHelpText>
        <label>Lead Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Line of Business for Leads</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CTK - Complex Turnkey</fullName>
                </value>
                <value>
                    <fullName>Equipment Only</fullName>
                </value>
                <value>
                    <fullName>MA - Maintenance Agreement</fullName>
                </value>
                <value>
                    <fullName>MA - Renewal</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>Parts Only</fullName>
                </value>
                <value>
                    <fullName>Rental Chillers</fullName>
                </value>
                <value>
                    <fullName>Retrofit/Upgrades</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Repair - Quoted</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Repair - T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Start-Up</fullName>
                </value>
                <value>
                    <fullName>TK - Turnkey Contracting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle Name</description>
        <inlineHelpText>Please enter middle name if any</inlineHelpText>
        <label>Middle Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model of the shipped equipment</description>
        <inlineHelpText>Model of the shipped equipment</inlineHelpText>
        <label>Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <formula>Number_of_Open_Activities__c  +  Number_of_Closed_Activities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Activities__c</fullName>
        <label>Number of Closed Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Activities__c</fullName>
        <label>Number of Open Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_City__c</fullName>
        <description>Site location city</description>
        <label>Opportunity City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Lead_Conversion_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field value on conversion moved to Opportunity object field: From Lead Conversion (Read only field for everyone). 
Please do not uncheck this check box.</description>
        <label>Opportunity Lead Conversion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_State__c</fullName>
        <description>State site is in</description>
        <label>Opportunity State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Equip_Make__c</fullName>
        <label>Primary Equip Make</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Daikin Applied</fullName>
                </value>
                <value>
                    <fullName>Daikin Manufacturing (VRV)</fullName>
                </value>
                <value>
                    <fullName>Goodman</fullName>
                </value>
                <value>
                    <fullName>JCI York</fullName>
                </value>
                <value>
                    <fullName>Liebert</fullName>
                </value>
                <value>
                    <fullName>Mammoth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Smardt</fullName>
                </value>
                <value>
                    <fullName>Trane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Service_Provider__c</fullName>
        <description>Existing Svc Provider</description>
        <inlineHelpText>Who currently services job</inlineHelpText>
        <label>Primary Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Daikin Applied</fullName>
                </value>
                <value>
                    <fullName>Honeywell</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>JCI York</fullName>
                </value>
                <value>
                    <fullName>Mech Contractor</fullName>
                </value>
                <value>
                    <fullName>Siemens</fullName>
                </value>
                <value>
                    <fullName>Trane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>Maps to Opportunity on Convert</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referring_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which Customer gave us the referral?</description>
        <inlineHelpText>Which Customer gave us the referral?</inlineHelpText>
        <label>Referring Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Referring Customer)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <externalId>true</externalId>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>This field is used as an External ID.</description>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Expiration__c</fullName>
        <description>Date that the Service Contract Expires. This can be for our equipment or competitors.</description>
        <inlineHelpText>Date that the Service Contract Expires. This can be for our equipment or competitors.</inlineHelpText>
        <label>Service Contract Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>Date the equipment shipped</description>
        <inlineHelpText>Date the equipment shipped</inlineHelpText>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipped_Equipment_Owner_Name__c</fullName>
        <description>Owner Name of the Shipped Equipment</description>
        <inlineHelpText>Owner Name of the Shipped Equipment</inlineHelpText>
        <label>Shipped Equipment Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Warranty_Expiry_Date__c</fullName>
        <label>Standard Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A-C Chiller</fullName>
                </value>
                <value>
                    <fullName>DX - Splits</fullName>
                </value>
                <value>
                    <fullName>Lg RTU / SC</fullName>
                </value>
                <value>
                    <fullName>W-C Chiller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What is the name of the Tech that gave the Tech Tip for this Lead?</description>
        <inlineHelpText>What is the name of the Tech that gave the Tech Tip for this Lead?
(Contact Type is Service Tech or DA Factory Service Tech OR Title is Journeyman, Foreman, Apprentice or Service Supervisor)</inlineHelpText>
        <label>Tech</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
            <errorMessage>Contact must be a Service Tech</errorMessage>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>equals</operation>
                <value>Service Tech, DA Factory Service Tech</value>
            </filterItems>
            <filterItems>
                <field>Contact.Title</field>
                <operation>equals</operation>
                <value>Journeyman, Technician</value>
            </filterItems>
            <filterItems>
                <field>Contact.Title</field>
                <operation>equals</operation>
                <value>Apprentice, Foreman</value>
            </filterItems>
            <filterItems>
                <field>Contact.Title</field>
                <operation>equals</operation>
                <value>Service Supervisor</value>
            </filterItems>
            <filterItems>
                <field>Contact.Active_DCW__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Select the Tech who gave the tip</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Top_Ten_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if one of your top ten leads</description>
        <inlineHelpText>FS use only-Check only if one of your top 10 leads</inlineHelpText>
        <label>Top Ten Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_ten_Lead_Order__c</fullName>
        <description>FS Use Only - Order of Top Ten Leads</description>
        <inlineHelpText>FS Use Only - Order of Top Ten Leads</inlineHelpText>
        <label>Top Ten Lead Order</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Top_Ten_Lead__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <description>Warranty on the shipped equipment</description>
        <inlineHelpText>Warranty on the shipped equipment</inlineHelpText>
        <label>Warranty</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified,Unqualified</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Birmingham_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Birmingham District Leads</label>
        <queue>Birmingham_District_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAAL_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Owner_User_Department__c</field>
            <operation>contains</operation>
            <value>DAAL</value>
        </filters>
        <label>DAAL Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>DAAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAFL_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Owner_User_Department__c</field>
            <operation>contains</operation>
            <value>DAFL</value>
        </filters>
        <label>DAFL Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>South_Florida</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAGA_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Owner_User_Department__c</field>
            <operation>contains</operation>
            <value>DAGA</value>
        </filters>
        <label>DAGA Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>DAGA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DANY_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Owner_User_Department__c</field>
            <operation>contains</operation>
            <value>DANY</value>
        </filters>
        <label>DANY Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>DANY</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>